--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
 </div>
 {%for i in k%}
 {%if i =='-\n'%}<div class='topic'>  
-{%elif i == '--\n'%}</div>
+{%elif i == '--\n'%}</div><br>
 {%elif i == '--'%}</div>
 {%else%}
 <p>
